# trading-signal

./: .dockerignore  .env.example  .gitignore  AUTO_ANALYSIS_FIX.md  DASH_ANALYSIS_FIX.md  Dockerfile  ENHANCED_LANDING_PAGE_COMPLETE.md  FIX_ANALYSIS_ERROR.md  HISTORY_PAGE_COMPLETE.md  HISTORY_PAGE_FIX.md  HISTORY_PAGE_FIXED.md  LANDING_PAGE_IMPLEMENTATION_SUMMARY.md  LANDING_PAGE_UX_IMPROVEMENTS.md  LICENSE  NOTIFICATIONS_IMPROVEMENT.md  ONBOARDING_FLOW_DESIGN.md  QUICK_START.md  QUICK_START_FIXED.md  README.md  ROUTING_WORKFLOW_FIX.md  RUN_PROJECT.md  START_PROJECT.sh  STOCK_NAVIGATION_FIX.md  SYSTEM_COMPLETION_ROADMAP.md  UX_ANALYSIS_AND_IMPROVEMENTS.md  UX_IMPROVEMENTS_IMPLEMENTATION_PLAN.md  VERIFY_SETUP.md  celerybeat-schedule  check_users.py  create_test_user.py  docker-compose.yml  frontend-setup.sh  pyproject.toml  reproduce_login_crash.py  reset_password.py  run_project.sh  test_callbacks.py  triage_login.py  verify_params.py
.gemini/: ALL_PHASES_COMPLETE.md  DASHBOARD_MERGE_COMPLETE.md  DYNAMIC_PREDICTIONS_FIX.md  FIX_CHART_REDIRECTION.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_SIGNAL_INTELLIGENCE.md  PHASE5_COMPLETE.md  PORTFOLIO_CENTRIC_TRANSFORMATION.md  PORTFOLIO_CONTEXT_FIX.md  PROFESSIONAL_UPGRADE_PLAN.md  SIGNAL_INTELLIGENCE_ARCHITECTURE.md  SIGNAL_INTELLIGENCE_PAGE.md
Project Reseach/: COMPLETE_ROADMAP.md  CRITICAL_RESEARCH_PAPERS_AND_STRATEGIES.md  Complete_Enterprise_Trading_Stack.md  Enterprise_Stack_Summary.md  MARKET_RESEARCH_DEEP_ANALYSIS.md  Production_Grade_Trading_Implementation.md  Strategic_Implementation_Roadmap.md  Trading_Signals_Complete_Guide.md
frontend/: README.md  index.html  package-lock.json  package.json  start-dev.sh  vite.config.ts
models/: model_metrics.json
prediction_history/: AAPL_20260111_191911_3e44de94.json  AAPL_20260111_191923_18899eea.json  AAPL_20260111_191926_6b1d2342.json  AAPL_20260111_191929_306198f8.json  AAPL_20260111_191933_09631f9f.json  AAPL_20260111_192012_ca674d20.json  AAPL_20260111_192111_2d752e41.json  AAPL_20260111_192142_e92beef3.json  (+519 more)
(+203 files in other folders)
